<resources>
    <string name="app_name">Sky</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_description_login">Your travel compassion</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_log_in">Log in</string>
    <string name="action_log_in_short">Log in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgetten_your_password">Forgotten your password?</string>
    <string name="need_an_account">Need an account?</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="sign_up_failed">Sign Up Failed</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="login_signup_button_text">Create one</string>
    <string name="invalid_confirm_password">Password is not matching to confirm password</string>
    <string name="invalid_fullName">Not a valid name</string>
    <string name="only_letters">Should contain only letters</string>
    <string name="title_activity_sky_main">SkyMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_discover">Discover</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_traveller">traveller</string>
    <string name="discover_search">Type a Place</string>
    <string name="title_discover_search">Discover search</string>
    <string name="location_access">Location access</string>
    <string name="location_access_message">This persmission is required for getting more accurate places result according to your current location</string>
    <string name="accept">ACCEPT</string>
    <string name="preference_file_key">com.example.sky.SKY_APP_77212</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="voice_search">voice search</string>
    <string name="mic_search_discover_description">Use voice for searching places</string>
    <string name="predictions_for">show predictions for %s</string>
    <string name="things_to_do">TODO</string>
    <string name="places">Places</string>
    <string name="hotel">Hotel</string>
</resources>
