<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.sky.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home" />

    <fragment
            android:id="@+id/navigation_discover"
            android:name="com.example.sky.ui.discover.DiscoverFragment"
            android:label="@string/title_discover"
            tools:layout="@layout/fragment_discover" />

    <fragment
            android:id="@+id/navigation_traveller"
            android:name="com.example.sky.ui.traveller.TravellerFragment"
            android:label="@string/title_traveller"
            tools:layout="@layout/fragment_traveller" />
    <fragment
            android:id="@+id/navigation_favorite"
            android:name="com.example.sky.ui.favorite.FavoriteFragment"
            android:label="@string/title_favorite"
            tools:layout="@layout/fragment_favorite" />
</navigation>
